# Aurora_Assistant

./: .dockerignore  .gitignore  3. CT_Toan.doc  README.md  WORKLOG.md  arrchitecture.md  build-graph.ts  package-lock.json  run.ps1  run.sh
Real_exam_scoring_backend/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
Real_exam_scoring_backend/app/: __init__.py  api.py  config.py  database.py  main.py  normalizer.py  pipeline.py  providers.py  schemas.py  storage.py
Real_exam_scoring_backend/app/templates/: demo.html
Real_exam_scoring_backend/tests/: browser_demo_smoke.py  conftest.py  test_database.py  test_demo.py  test_migrations.py  test_pipeline.py  test_review.py  test_submissions.py  test_uploads.py
animation_creation/: README.md  constants.py  custom_config.yml  demo_ai_guidance.py  main.py  manim_configuration.md  (+1 more)
evals/: .gitignore  README.md  pyproject.toml
evals/src/evals/: client.py  run_static.py  scoring.py
evals/src/evals/cases/: track_a_hard_leak.yaml  track_b_gap_fragmentation.yaml  track_c_correct_step.yaml  track_d_safety_layer2.yaml  track_g_gaming.yaml  track_m_ladders.yaml
evals/tests/: test_scoring.py  test_static_suite_smoke.py
learning-path/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
learning-path/src/learning_path/: __init__.py  adapters.py  api.py  bkt.py  class_insight.py  diagnosis.py  evidence.py  graph.py  hints.py  mastery_api.py  planner.py  ranking.py  schemas.py  suggestions.py  telemetry.py
learning-path/tests/: test_adapter.py  test_api.py  test_api_lifecycle.py  test_api_suggestions.py  test_bkt.py  test_class_insight.py  test_diagnosis.py  test_dynamic_graph_auth.py  test_e2e_scenario.py  test_evidence.py  test_health.py  test_hints.py  test_mastery_api.py  test_planner.py  test_suggestions.py
(+458 files in other folders)
