[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-handwritten-ocr"
version = "0.1.0"
description = "Handwritten OCR and rubric mapping backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pillow>=11,<13",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-cov>=7,<8"]
dev = [
  "playwright>=1.50,<2",
  "pytest>=8,<9",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["app*"]
