[project]
name = "evals"
version = "0.1.0"
description = "Eval harness cho Socratic Chat (backend Go) — xem docs/eval-socratic-chat.md"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
eval-static = "evals.run_static:main"
