[project]
name = "learning-path"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anhuynh219", email = "anhuynh200319@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "langgraph>=1.2.9",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
